--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+/* body {
+  filter: invert(1);
+  background-color: rgb(0, 0, 0);
+} */
+
 .App {
   text-align: center;
 }
@@ -20,6 +25,7 @@
 
 img {
   cursor: pointer;
+  width: 20vw;
 }
 
 button {
@@ -29,10 +35,6 @@ button {
 
 button:hover {
   cursor: pointer;
-}
-
-img {
-  width: 300px;
 }
 
 .detailedArt {
@@ -58,4 +60,58 @@ img {
   height: 330px;
   border-radius: 10px;
   background-color: rgba(95, 158, 160, 0.5); */
+}
+
+#root {
+  height: 100vh;
+  width: 100vw;
+  /* overflow: hidden; */
+  overflow-x: hidden;
+}
+
+.main {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+}
+
+.main div {
+  display: flex;
+  flex-direction: column;
+  margin-top: 40px;
+  height: 100%;
+  justify-content: center;
+}
+
+.detailed img {
+  width: 40vw;
+}
+
+div.detailed {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+
+  width: 100vw;
+  margin-bottom: 40px;
+}
+
+div.detailed img {
+  /* display: flex;
+  justify-content: flex-start; */
+  margin-left: 20px;
+  margin-top: 20px;
+  grid-column: 1;
+}
+
+.pDet {
+  width: 40vw;
+  height: 60vh;
+  display: grid;
+  margin-right: 20px;
+  margin-top: 20px;
+  grid-column: 2;
+  /* align-self: center; */
+
+  height: 20px;
 }
