--- a/src/App.css
+++ b/src/App.css
@@ -81,10 +81,15 @@ button:hover {
   margin-top: 40px;
   height: 100%;
   justify-content: center;
+  max-height: 60vh;
 }
 
 .detailed img {
   width: 40vw;
+}
+
+.main div img {
+  max-height: 50vh;
 }
 
 div.detailed {
