--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@ button:hover {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  
+
   width: 600px;
   height: 930px;
   border-radius: 10px;
@@ -86,6 +86,10 @@ button:hover {
 
 .detailed img {
   width: 40vw;
+}
+
+.detailed button {
+  height: 30px;
 }
 
 .main div img {
